--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "reusable",
     "chart"
   ],
-  "homepage": "https://github.com/NuCivic/react-nvd3",
+  "homepage": "https://github.com/renddiyeh/react-nvd3",
   "author": {
     "name": "Mariano Carballal",
     "email": "marianocarballal@gmail.com",
@@ -18,10 +18,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:NuCivic/react-nvd3.git"
+    "url": "git@github.com:renddiyeh/react-nvd3.git"
   },
   "bugs": {
-    "url": "https://github.com/NuCivic/react-nvd3/issues"
+    "url": "https://github.com/renddiyeh/react-nvd3/issues"
   },
   "license": "MIT",
   "engines": {
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "d3": "^3.5.16",
-    "nvd3": "^1.8.2"
+    "nvd3": "git://github.com/renddiyeh/nvd3.git"
   },
   "peerDependencies": {
     "react": ">=0.14.0",
